update posts test

--- a/collections/_posts/2021-01-14-test.md
+++ b/collections/_posts/2021-01-14-test.md
@@ -1,13 +1,17 @@
 ---
-Titre: 'test '
-post_teaser: ''
-post_description: test cms
+title: 'test '
 date: 2021-01-14T00:00:00.000+01:00
-texte: Ceci est un autre test
+excerpt: "Ceci est un test"
 
 ---
 Ceci est un contenu de test version 2.
 
+
 ![](http://www.univ-lorraine.fr/sites/www.univ-lorraine.fr/files/node_files/publics/users/martin38/2013/10/logo_ul.jpg)
 
 ![](/uploads/img_4706.jpg)
+
+
+Example lien : [Lorraine Fab Living Lab (LF2L)](http://lf2l.fr/).
+
+
